# sc2pp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  SC2pp.xml  TODO  cmake_uninstall.cmake.in
python/: CMakeLists.txt  sc2pp.i  setup.py
sc2pp/: parse_details.cpp  parse_events.cpp  parse_messages.cpp  parsers.cpp  parsers.h  parsers.hpp  types.cpp  types.h  types.hpp
sc2pp/detail/: parsers.cpp  parsers.hpp  parsers_ability_event.cpp  parsers_ability_event.hpp  parsers_ability_event_fwd.hpp  parsers_common.cpp  parsers_common.hpp  parsers_game_event.cpp  parsers_game_event.hpp  parsers_game_event_fwd.hpp  parsers_message.cpp  parsers_message.hpp  parsers_message_fwd.hpp  parsers_object.cpp  parsers_object.hpp  parsers_object_fwd.hpp  parsers_timestamp.cpp  parsers_timestamp.hpp  parsers_timestamp_fwd.hpp  types.cpp  types.hpp  utils.hpp
tests/: CMakeLists.txt  bitshift_iterator.cpp  test_parsers.cpp
tools/: CMakeLists.txt  detailsinfo.cpp  events.cpp  messages.cpp  mpqinfo.cpp  replay.cpp  unpack.cpp
