FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")
IF (CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "-g0 -std=c++0x -Wall -Wextra")
ENDIF()

SET_SOURCE_FILES_PROPERTIES(sc2pp.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(sc2pp.i PROPERTIES SWIG_FLAGS "-builtin")
SWIG_ADD_MODULE(sc2pp python sc2pp.i)
SWIG_LINK_LIBRARIES(sc2pp ${PYTHON_LIBRARIES} SC2pp)
