INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
IF (CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "-g0 -std=c++0x -Wall -Wextra")
ENDIF()

GET_DIRECTORY_PROPERTY(INCLUDE_DIRECTORIES INCLUDE_DIRECTORIES)
GET_TARGET_PROPERTY(SC2pp_SHARED_OBJECT_DIRECTORY SC2pp LIBRARY_OUTPUT_DIRECTORY)

CONFIGURE_FILE(setup.py .)
CONFIGURE_FILE(sc2pp.i . COPY_ONLY)

ADD_CUSTOM_COMMAND(OUTPUT sc2pp.py
COMMAND python setup.py build_ext --inplace
MAIN_DEPENDENCY sc2pp.i
DEPENDS setup.py
)

ADD_CUSTOM_TARGET(sc2pp.py ALL DEPENDS sc2pp.py
SOURCES sc2pp.i setup.py)


INSTALL(CODE "EXECUTE_PROCESS(COMMAND python setup.py install WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
